Fix styles for mobile phone display on IOS.

--- a/css/styles.css
+++ b/css/styles.css
@@ -527,103 +527,46 @@ blockquote > div > div > cite {
   .pitch-section-heading {
     display: flex;
     display: -webkit-flex;
-    column-gap: 0.65rem;
+    gap: 0 0.65rem;
     overflow: hidden;
 
-    .pitch-section-img {
-      img {
-        max-width: 70px;
-        margin-block-start: 0.25rem;
-        border-radius: 0.85rem;
-        flex-basis: 70px;
-        flex-grow: 0;
-        -moz-border-radius: 0.85rem;
-        -webkit-border-radius: 0.85rem;
-        border: 2px solid var(--pitch-section-border-color);
+    .pitch-section-heading__img {
+      margin-block-start: 0.5rem;
+      border-radius: 0.85rem;
+      max-width: 70px;
+      max-height: 70px;
+      flex: auto 0 0;
+      -moz-border-radius: 0.85rem;
+      -webkit-border-radius: 0.85rem;
+      border: 2px solid var(--pitch-section-border-color);
 
-        -webkit-mask-image: -webkit-radial-gradient(white, black);
-
-        transform: translateZ(0);
-
-        @media (min-width: 800px) {
-          max-width: 80px;
-          flex-basis: 80px;
-        }
+      @media (min-width: 800px) {
+        max-width: 80px;
+        max-height: 80px;
       }
     }
 
-    .pitch-section-head {
+    .pitch-section-heading__head {
       flex-grow: 1;
-      justify-content: center;
-
-      /* .term-link:hover {
-        background-color: yellow;
-        text-decoration: none;
-      } */
+      font-family: "Roboto Condensed SemiBold", sans-serif;
     }
   }
 
   .pitch-section-body {
-    padding: 0.25rem;
+    padding: 0.5rem;
 
     p:first-child {
       margin-block-start: 0;
     }
   }
 
-  /* .pitch-section-layout {
-    display: flex;
-    column-gap: 0.65rem;
-    padding-inline-start: 0.2rem;
-    height: max-content;
-    align-items: flex-start;
+  .pitch-section-body {
+    padding: 0.5rem;
 
-    .pitch-section-img {
-      img {
-        max-width: 70px;
-        margin-top: 0.25rem;
-        border-radius: 0.85rem;
-        border: 2px solid var(--pitch-section-border-color);
-
-        @media (min-width: 800px) {
-          max-width: 80px;
-        }
-      }
+    p:first-child {
+      margin-block-start: 0;
     }
-
-     .pitch-section-text {
-      flex-grow: 1;
-      justify-content: center;
-
-      .term-link:hover {
-        background-color: yellow;
-        text-decoration: none;
-      }
-    } 
-  } */
-
-  /* .pitch-section-layout-alt {
-    display: flex;
-    column-gap: 1rem;
-    padding-inline-start: 0.2rem;
-    height: max-content;
-    align-items: flex-start;
-
-    .pitch-section-text {
-      flex: 0 1 80%;
-      justify-content: center;
-    }
-
-    .pitch-section-img {
-      flex: 0 0 10%;
-
-      img {
-        max-width: 100px;
-        padding-top: 0.4rem;
-        border-radius: 0.85rem;
-      }
-    }
-  } */
+  }
 }
 
 @media (min-width: 800px) {
